# httk.github.io

./: .gitignore  .gitmodules  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: docs.yml
docs/: conf.py  index.md  modules.md
docs/_templates/autoapi/: index.rst
docs/notebooks/: example-core.ipynb  example-structures.ipynb  index.md
docs/reference/: index.md
src/httk/: atomistic  core
